PROJECT(common)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

AUX_SOURCE_DIRECTORY(./src DIR_SRCS)

ADD_LIBRARY(common STATIC ${DIR_SRCS})

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -fPIC")

SET(CMAKE_C_FLAGS "-std=c++0x")
SET(CMAKE_CXX_FLAGS "-std=c++0x")

SET_TARGET_PROPERTIES(common PROPERTIES OUTPUT_NAME libcommon.a)
SET_TARGET_PROPERTIES(common PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(common PROPERTIES SUFFIX "")

